--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -223,7 +223,7 @@
 					<h3>Assumed Knowledge</h3>
 
 					<div class="size-80 left-txt">
-						<p class="fragment" data-fragment-index="0">
+						<p>
 							No assumed knowledge from senior high school mathematics.
 						</p>
 						<p class="fragment" data-fragment-index="7">
@@ -231,19 +231,19 @@
 						</p>
 
 						<ul>
-							<li class="fragment" data-fragment-index="2">
+							<li>
 								Understanding of the basic operations.
 							</li>
-							<li class="fragment" data-fragment-index="3">
+							<li>
 								Working with negative numbers.
 							</li>
-							<li class="fragment" data-fragment-index="4">
+							<li>
 								Working with fractions.
 							</li>
-							<li class="fragment" data-fragment-index="5">
+							<li>
 								Converting between fractions, decimals and percentages.
 							</li>
-							<li class="fragment" data-fragment-index="6">
+							<li>
 								Rounding decimals.
 							</li>
 
@@ -345,9 +345,9 @@
 
 					<div class="size-80 left-txt">
 
-						<ol style="line-height: 60px;">
+						<ol style="line-height: 80px;">
 							<li class="fragment" data-fragment-index="0">
-								Workshop.
+								Workshop. 📝
 							</li>
 							<li class="fragment" data-fragment-index="1">
 								Revision sessions/Drop-in Session/Study Sessions.
@@ -356,14 +356,14 @@
 								Microsoft Teams.
 							</li>
 							<li class="fragment" data-fragment-index="3">
-								Email (for personal and confidential matters).
+								Email: <a href="mailto:j.poncecampuzano@griffith.edu.au"
+									target="_blank">j.poncecampuzano@griffith.edu.au</a>
 							</li>
 
 
 						</ol>
 					</div>
 
-					<br />
 					<br />
 					<br />
 					<br />
@@ -504,60 +504,60 @@
 					<img style="width: 100%;" src="images/week-01/branches.png">
 
 					<!-- Rectangle 1 -->
-					<div  class="fragment fade-out" data-fragment-index="0" style="
-      position: absolute;
-      top: 1%;
-      left: 1%;
-      width: 350px;
-      height: 260px;
-      background-color: white;
-      opacity: 1;
-    "></div>
+					<div class="fragment fade-out" data-fragment-index="0" style="
+      					position: absolute;
+      					top: 1%;
+      					left: 1%;
+      					width: 350px;
+      					height: 260px;
+      					background-color: white;
+      					opacity: 1;
+    					"></div>
 
 					<!-- Rectangle 2 -->
 					<div class="fragment fade-out" data-fragment-index="1" style="
-      position: absolute;
-      top: 20%;
-      left: 38%;
-      width: 230px;
-      height: 380px;
-      background-color: white;
-      opacity: 1;
+      					position: absolute;
+      					top: 19%;
+      					left: 38%;
+      					width: 230px;
+      					height: 380px;
+      					background-color: white;
+      					opacity: 1;
       
-    "></div>
+    					"></div>
 
 					<!-- Rectangle 3 -->
 					<div class="fragment fade-out" data-fragment-index="2" style="
-      position: absolute;
-      top: 55%;
-      left: 2%;
-      width: 320px;
-      height: 260px;
-      background-color: white;
-      opacity: 1;
-    "></div>
+      					position: absolute;
+      					top: 55%;
+      					left: 2%;
+      					width: 320px;
+      					height: 260px;
+      					background-color: white;
+      					opacity: 1;
+    					"></div>
 
 					<!-- Rectangle 4 -->
 					<div class="fragment fade-out" data-fragment-index="3" style="
-      position: absolute;
-      top: 3%;
-      left: 64%;
-      width: 325px;
-      height: 260px;
-      background-color: white;
-      opacity: 1;
-    "></div>
+      					position: absolute;
+      					top: 3%;
+      					left: 64%;
+      					width: 325px;
+      					height: 260px;
+      					background-color: white;
+      					opacity: 1;
+    					"></div>
 
 					<!-- Rectangle 5 -->
-					<div  class="fragment fade-out" data-fragment-index="4" style="
-      position: absolute;
-      top: 55%;
-      left: 64%;
-      width: 325px;
-      height: 260px;
-      background-color: white;
-      opacity: 1;
-    "></div>
+					<div class="fragment fade-out" data-fragment-index="4" style="
+      					position: absolute;
+      					top: 55%;
+      					left: 64%;
+      					width: 325px;
+      					height: 260px;
+      					background-color: white;
+      					opacity: 1;
+    					"></div>
 				</section>
 
 				<section data-auto-animate>
@@ -579,13 +579,13 @@
 
 				<div class="left-txt size-85">
 					<ul style="line-height: 60px;">
-						<li class="fragment" data-fragment-index="0">
+						<li>
 							Order of Operations.
 						</li>
-						<li class="fragment" data-fragment-index="1">
+						<li>
 							Index Laws.
 						</li>
-						<li class="fragment" data-fragment-index="2">
+						<li>
 							Scientific Notation.
 						</li>
 					</ul>
@@ -605,6 +605,7 @@
 
 				<br />
 			</section>
+
 
 			<section>
 				<section data-auto-animate="">
@@ -642,6 +643,8 @@
 
 					<br />
 				</section>
+
+
 
 				<section data-auto-animate="">
 					<h3>Let's solve it using BIDMAS</h3>
@@ -685,11 +688,52 @@
 					<br />
 				</section>
 
+				<section data-auto-animate="">
+					<h3>What if? 🤔</h3>
+					<div class="size-80">
+						<p>$3 + 12 \times 3 ÷ 2$</p>
+					</div>
+
+					<br />
+
+					<table style="border-collapse: collapse; text-align: center; width: 100%;" class="fragment"
+						data-fragment-index="1">
+						<tr>
+							<td style="border: none; text-align: center;" class="fragment" data-fragment-index="1">
+								$3 + 12 \times 3 ÷ 2 = 21$
+							</td>
+							<td style="border-left: 2px solid black; border-top: none; border-bottom: none; border-right: none; text-align: center;"
+								class="fragment" data-fragment-index="1">
+								$3 + 12 \times 3 ÷ 2 = 22.5 $
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none; text-align: center; font-size: 150%;" class="fragment"
+								data-fragment-index="2">
+								✅
+							</td>
+							<td
+								style="border-left: 2px solid black; border-top: none; border-bottom: none; border-right: none; text-align: center; font-size: 150%;">
+								<span class="fragment" data-fragment-index="2">❌</span>
+							</td>
+						</tr>
+					</table>
+
+					<br />
+
+					<span style="font-weight: bold; font-size: 110%;" class="fragment" data-fragment-index="3">
+						Always follow the order of operations!
+					</span>
+					<br />
+					<br />
+					<br />
+				</section>
+
 				<section>
 					<h3>Practice Examples 📝</h3>
 					<div class="left-txt size-85">
 						<p>Try solving these using the correct order of operations:</p>
-						<ol>
+						<ol style="line-height: 80px;">
 							<li>\( 4 + 6 \times 2 \)</li>
 							<li>\( (4 + 6) \times 2 \)</li>
 							<li>\( 3^2 + 5 \times 2 \)</li>
@@ -755,7 +799,7 @@
 
 					</div>
 
-					<div class="">
+					<div style="font-size: 110%;">
 
 						<p>
 							Format: <span>$\;a \times 10^n \;$</span>
@@ -838,15 +882,13 @@
 
 			</section>
 
+
 			<section>
 
 				<section>
-					
+					<h3>Index Laws</h3>
 
-					<div>
-						<h3>Index Laws</h3>
-
-						<div class=" left-txt size-95">
+					<div class=" left-txt size-95">
 
 							<p class="fragment" data-fragment-index="0">
 								Index laws (or exponent rules) help us simplify
@@ -854,130 +896,128 @@
 								base.
 							</p>
 					</div>
-		</div>
+					<div>
+						<p class="fragment" data-fragment-index="1">
+							$
+							\ds \left(\frac{2a^2b}{b^3}\right)^3 ÷ \left(\frac{16a^5}{ab^7}\right)^2
+							$
+						</p>
+					</div>
 
-		<div>
+					<div>
+						<picture class="fragment" data-fragment-index="2">
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.gif" alt="😬" width="120"
+								height="120">
+						</picture>
+					</div>
 
+					<br />
+				</section>
 
-			<p class="fragment" data-fragment-index="1">
-				$
-				\ds \left(\frac{2a^2b}{b^3}\right)^3 ÷ \left(\frac{16a^5}{ab^7}\right)^2
-				$
-			</p>
-		</div>
+				<section>
+					<div style="margin-top: -22px;">
+						<h3>Index Laws</h3>
 
-		<div>
-			<picture class="fragment" data-fragment-index="2">
-				<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.webp" type="image/webp">
-				<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.gif" alt="😬" width="120"
-					height="120">
-			</picture>
-		</div>
+						<div class=" left-txt size-95">
 
-		<br />
-		</section>
-
-		<section>
-			<div style="margin-top: -22px;">
-				<h3>Index Laws</h3>
-
-				<div class=" left-txt size-95">
-
-					<p>
-						Index laws (or exponent rules) help us simplify
-						expressions involving powers of the same
-						base.
-					</p>
-				</div>
-			</div>
-
-			<div>
-
-				<p>
-					$
-					\ds \frac{b^8}{32a^2}
-					$
-				</p>
-			</div>
-
-			<div>
-
-				<picture>
-					<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.webp" type="image/webp">
-					<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.gif" alt="😃" width="120"
-						height="120">
-				</picture>
-			</div>
-
-			<br />
-		</section>
-
-
-		<section>
-			<h3>Index Laws</h3>
-
-			<table style="width: 100%;font-size: 94%;padding: none;">
-				<tr>
-					<td style="width: 75%; text-align: left;">
-						<ul style="line-height: 80px;margin-left: -10px;">
-							<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m
-								\times a^n = a^{m+n} \)</li>
-							<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \(
-								\dfrac{a^m}{a^n} = a^{m-n} \)</li>
-							<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \(
-								\left(a^m\right)^n = a^{m \times n} \)</li>
-							<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \(
-								\left(ab\right)^n = a^n b^n \)</li>
-							<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1
-								\quad (a \neq 0) \)</li>
-							<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \(
-								a^{-n} = \dfrac{1}{a^n} \)</li>
-						</ul>
-					</td>
-					<td style="width: 25%; text-align: center;" class="fragment" data-fragment-index="7">
-						<div style="border: 1px solid rgb(188, 188, 188); padding: 20px; border-radius: 15px;">
-							<strong>Extra:</strong><br />
-							$\large a^{\frac{1}{n}} = \sqrt[n]{a}$
+							<p>
+								Index laws (or exponent rules) help us simplify
+								expressions involving powers of the same
+								base.
+							</p>
 						</div>
-					</td>
-				</tr>
-			</table>
+					</div>
 
-			<br />
-		</section>
+					<div>
 
-		<section>
-			<h3>Examples: Multiply and Divide</h3>
+						<p>
+							$
+							\ds \frac{b^8}{32a^2}
+							$
+						</p>
+					</div>
 
-			<div class="left-txt size-95">
-				<ul style="line-height: 120px;">
-					<li>
-						<span>
-							\( x^3 \times x^4 \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="1">
+					<div>
+
+						<picture>
+							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.webp"
+								type="image/webp">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f603/512.gif" alt="😃" width="120"
+								height="120">
+						</picture>
+					</div>
+
+					<br />
+				</section>
+
+
+				<section>
+					<h3>Index Laws</h3>
+
+					<table style="width: 100%;font-size: 94%;padding: none;">
+						<tr>
+							<td style="width: 75%; text-align: left;">
+								<ul style="line-height: 80px;margin-left: -10px;">
+									<li class="fragment" data-fragment-index="1"><strong>Multiplying:</strong> \( a^m
+										\times a^n = a^{m+n} \)</li>
+									<li class="fragment" data-fragment-index="2"><strong>Dividing:</strong> \(
+										\dfrac{a^m}{a^n} = a^{m-n} \)</li>
+									<li class="fragment" data-fragment-index="3"><strong>Power of a power:</strong> \(
+										\left(a^m\right)^n = a^{m \times n} \)</li>
+									<li class="fragment" data-fragment-index="4"><strong>Power of a product:</strong> \(
+										\left(ab\right)^n = a^n b^n \)</li>
+									<li class="fragment" data-fragment-index="5"><strong>Zero index:</strong> \( a^0 = 1
+										\quad (a \neq 0) \)</li>
+									<li class="fragment" data-fragment-index="6"><strong>Negative index:</strong> \(
+										a^{-n} = \dfrac{1}{a^n} \)</li>
+								</ul>
+							</td>
+							<td style="width: 25%; text-align: center;" class="fragment" data-fragment-index="7">
+								<div style="border: 1px solid rgb(188, 188, 188); padding: 20px; border-radius: 15px;">
+									<strong>Extra:</strong><br />
+									$\large a^{\frac{1}{n}} = \sqrt[n]{a}$
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<br />
+				</section>
+
+				<section>
+					<h3>Examples: Multiply and Divide</h3>
+
+					<div class="left-txt size-95">
+						<ul style="line-height: 120px;">
+							<li>
+								<span>
+									\( x^3 \times x^4 \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="1">
 									\( = x^{3+4}\)
 								</span>
 								<span class="fragment" data-fragment-index="2">
 									\( = x^7 \)
 								</span>-->
-					</li>
-					<li class="fragment" data-fragment-index="3">
-						<span>
-							\(\dfrac{y^5}{y^2} \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="4">
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								<span>
+									\(\dfrac{y^5}{y^2} \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="4">
 									\( = y^{5 - 2}\)
 								</span>
 								<span class="fragment" data-fragment-index="5">
 									\(= y^3 \)
 								</span>-->
-					</li>
-					<li class="fragment" data-fragment-index="6">
-						<span>
-							\( 2^3 \times 2^2 \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="7">
+							</li>
+							<li class="fragment" data-fragment-index="6">
+								<span>
+									\( 2^3 \times 2^2 \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="7">
 									\( = 2^{3+2}\)
 								</span>
 								<span class="fragment" data-fragment-index="8">
@@ -987,87 +1027,87 @@
 								<span class="fragment" data-fragment-index="9">
 									\( =32\)
 								</span>-->
-					</li>
-				</ul>
-			</div>
-			<br />
-			<br />
-			<br />
-		</section>
+							</li>
+						</ul>
+					</div>
+					<br />
+					<br />
+					<br />
+				</section>
 
-		<section>
-			<h3>Power of a Power / Product</h3>
+				<section>
+					<h3>Power of a Power / Product</h3>
 
-			<div class="left-txt size-95">
-				<ul style="line-height: 120px;">
-					<li class="fragment" data-fragment-index="0">
-						<span>
-							\(\left(x^2\right)^3 \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="1">
+					<div class="left-txt size-95">
+						<ul style="line-height: 120px;">
+							<li class="fragment" data-fragment-index="0">
+								<span>
+									\(\left(x^2\right)^3 \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="1">
 									\( = x^{2 \times 3} \)
 								</span>
 								<span class="fragment" data-fragment-index="2">
 									\(= x^6 \)
 								</span>-->
-					</li>
-					<li class="fragment" data-fragment-index="3">
-						<span>
-							\(\left(3a^2\right)^2 \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="4">
+							</li>
+							<li class="fragment" data-fragment-index="3">
+								<span>
+									\(\left(3a^2\right)^2 \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="4">
 									\( = 3^2 \times a^4 \)
 								</span>
 								<span class="fragment" data-fragment-index="5">
 									\(= 9a^4 \)
 								</span>-->
-					</li>
-					<li class="fragment" data-fragment-index="6">
-						<span>
-							\(\left(2x^3\right)^2 \)
-						</span>
-						<!--<span class="fragment" data-fragment-index="7">
+							</li>
+							<li class="fragment" data-fragment-index="6">
+								<span>
+									\(\left(2x^3\right)^2 \)
+								</span>
+								<!--<span class="fragment" data-fragment-index="7">
 									\( = 2^2 \times x^6 \)
 								</span>
 								<span class="fragment" data-fragment-index="8">
 									\(= 4x^6 \)
 								</span>-->
-					</li>
-				</ul>
-			</div>
-			<br />
-			<br />
-			<br />
-		</section>
+							</li>
+						</ul>
+					</div>
+					<br />
+					<br />
+					<br />
+				</section>
 
-		<section>
-			<h3>Zero and Negative Indices</h3>
+				<section>
+					<h3>Zero and Negative Indices</h3>
 
-			<div class="left-txt size-95">
-				<ul style="line-height: 80px;">
-					<li class="fragment" data-fragment-index="0">
-						<span>
-							\(a^0 = 1 \)
-						</span>
-						<span class="fragment" data-fragment-index="1">
-							(as long as \( a \neq 0 \))
-						</span>
+					<div class="left-txt size-95">
+						<ul style="line-height: 80px;">
+							<li class="fragment" data-fragment-index="0">
+								<span>
+									\(a^0 = 1 \)
+								</span>
+								<span class="fragment" data-fragment-index="1">
+									(as long as \( a \neq 0 \))
+								</span>
 
-						<p>
-							&nbsp;
-							<!--<span class="fragment" data-fragment-index="3">
+								<p>
+									&nbsp;
+									<!--<span class="fragment" data-fragment-index="3">
 										👉 \(\;7^0 = 1; \;\)
 									</span>
 									<span class="fragment" data-fragment-index="4">
 										also \(\;(-1234)^0 = 1 \)
 									</span>-->
-						</p>
-					</li>
-					<li class="fragment" data-fragment-index="5">
-						\( a^{-n} = \dfrac{1}{a^n} \)
-						<p>
-							&nbsp;
-							<!--<span class="fragment" data-fragment-index="6">
+								</p>
+							</li>
+							<li class="fragment" data-fragment-index="5">
+								\( a^{-n} = \dfrac{1}{a^n} \)
+								<p>
+									&nbsp;
+									<!--<span class="fragment" data-fragment-index="6">
 										👉 \(\;10^{-2}\)
 									</span>
 									<span class="fragment" data-fragment-index="7">
@@ -1076,48 +1116,48 @@
 									<span class="fragment" data-fragment-index="8">
 										\( = \dfrac{1}{100} \)
 									</span>-->
-						</p>
-					</li>
-					<li>
-						$a^{\frac{1}{n}}=\sqrt[n]{a}$
-					</li>
-				</ul>
-			</div>
-			<br />
-			<br />
-		</section>
+								</p>
+							</li>
+							<li class="fragment" data-fragment-index="9">
+								$a^{\frac{1}{n}}=\sqrt[n]{a}$
+							</li>
+						</ul>
+					</div>
+					<br />
+					<br />
+				</section>
 
 
-		<section>
-			<h3>Try These 📝</h3>
+				<section>
+					<h3>Try These 📝</h3>
 
-			<div class="left-txt size-95">
-				<ol style="line-height: 90px;">
-					<li> \( x^5 \times x^3 \) </li>
-					<li> \( \dfrac{a^6}{a^2} \) </li>
-					<li> \( \left(b^4\right)^2 \) </li>
-					<li> \( (2c)^3 \) </li>
-					<li> \( 5^0 + 3^{-1} \) </li>
-				</ol>
-			</div>
-			<br />
-			<br />
+					<div class="left-txt size-95">
+						<ol style="line-height: 90px;">
+							<li> \( x^5 \times x^3 \) </li>
+							<li> \( \dfrac{a^6}{a^2} \) </li>
+							<li> \( \left(b^4\right)^2 \) </li>
+							<li> \( \sqrt[4]{y^2} \) </li>
+							<li> \( 5^0 + 3^{-1} \) </li>
+						</ol>
+					</div>
+					<br />
+					<br />
 
-		</section>
-
-
-
-
-		</section>
+				</section>
 
 
 
 
+			</section>
 
 
-		<!-- Ends sections -->
 
-	</div>
+
+
+
+			<!-- Ends sections -->
+
+		</div>
 	</div>
 
 
