--- a/slides/1017scg/week-01.html
+++ b/slides/1017scg/week-01.html
@@ -98,13 +98,10 @@
 						style="width: 150px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
-				<h2>
-					<span class="size-70">
-						Foundation Mathematics
-						<br />
-						1017SCG
-					</span>
-				</h2>
+				<div class="size-95">
+					<h2>Foundation Mathematics</h2>
+					<p style="font-weight: bold; font-size: 120%;">1017SCG</p>
+				</div>
 
 				<br />
 				<p style="margin-top: 50px;">Week 1
