--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -69,13 +69,10 @@
 						style="width: 150px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
-				<h2>
-					<span class="size-70">
-						Foundation Mathematics
-						<br />
-						1017SCG
-					</span>
-				</h2>
+				<div class="size-95">
+					<h2>Foundation Mathematics</h2>
+					<p style="font-weight: bold; font-size: 120%;">1017SCG</p>
+				</div>
 
 				<br />
 				<p style="margin-top: 50px;">Course Introduction
@@ -86,7 +83,7 @@
 			<section>
 				<h3>Foundation Mathematics</h3>
 
-				<br/>
+				<br />
 				<p style="font-size: 120%;margin-bottom: 50px;">
 					Welcome!
 				</p>
@@ -94,12 +91,12 @@
 
 
 				<div class="size-80">
-					
-						<p class="fragment" data-fragment-index="0">
-							<span class="fragment custom emph">Convenor:</span>
-							<span>Juan Carlos Ponce Campuzano</span>
-						</p>
-					
+
+					<p class="fragment" data-fragment-index="0">
+						<span class="fragment custom emph">Convenor:</span>
+						<span>Juan Carlos Ponce Campuzano</span>
+					</p>
+
 
 				</div>
 
@@ -482,8 +479,7 @@
 				<br />
 			</section>
 
-			<section data-transition="fade"
-				data-background-color="rgb(0,0,0)"
+			<section data-transition="fade" data-background-color="rgb(0,0,0)"
 				data-background-iframe="https://www.dynamicmath.xyz/threejs/math-symbols-fall/">
 
 				<h3 style="color:white; margin-top: -0px;">See you in Week 1! </h3>
@@ -498,6 +494,12 @@
 				<br />
 				<br />
 
+			</section>
+
+			<section>
+
+				<h4>Credits</h4>
+				<div include-html="credits.html"></div>
 			</section>
 
 
