--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -57,13 +57,10 @@
 						style="width: 150px; vertical-align: middle; border: 0px solid rgb(255, 255, 255);">
 				</div>
 
-				<h2>
-					<span class="size-70">
-						Foundation Mathematics
-						<br />
-						1017SCG
-					</span>
-				</h2>
+				<div class="size-95">
+					<h2>Foundation Mathematics</h2>
+					<p style="font-weight: bold; font-size: 120%;">1017SCG</p>
+				</div>
 
 				<br />
 				<p style="margin-top: 50px;">Week 2
@@ -537,6 +534,12 @@
 
 
 
+			</section>
+
+			<section>
+
+				<h4>Credits</h4>
+				<div include-html="credits.html"></div>
 			</section>
 
 
