--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
   <title>Infinite magic room</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8GQQBCYTB5');
+  </script>
+
 </head>
 
 <body>
@@ -27,7 +37,7 @@
       <li><a href="notes/">Notes</a></li>
       <li><a href="https://www.dynamicmath.xyz/">More cool stuff</a></li>
     </ul>
-    
+
   </div>
 
   <script>
