--- a/notes/index.html
+++ b/notes/index.html
@@ -13,7 +13,7 @@ https://www.geogebra.org/m/xsy4fy25
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
     <link rel="icon" type="image/png" href="../assets/icon/infinity32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="../assets/icon/infinity16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../assets/icon/infinity16.png" sizes="16x16">
 
 
     <style>
@@ -56,7 +56,7 @@ https://www.geogebra.org/m/xsy4fy25
             margin-top: 20px;
             padding: 10px;
         }
-        
+
         /* Overlay card */
         .card {
             position: absolute;
@@ -83,23 +83,34 @@ https://www.geogebra.org/m/xsy4fy25
         .card a {
             color: rgb(255, 255, 255);
         }
-        .card a:hover{
+
+        .card a:hover {
             color: rgb(119, 230, 255);
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8GQQBCYTB5');
+    </script>
 
 
 </head>
 
 <body>
 
-    
+
 
     <div class="card">
-       <h1>Notes</h1>
-       <ul>
-        <li><a href="2201nsc/">Linear Algebra &amp; Applications</a></li>
-       </ul>
+        <h1>Notes</h1>
+        <ul>
+            <li><a href="2201nsc/">Linear Algebra &amp; Applications</a></li>
+        </ul>
     </div>
 
     <script type="importmap">
