--- a/slides/1010eng/flipping-coin-plot.html
+++ b/slides/1010eng/flipping-coin-plot.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -51,15 +61,15 @@
 				<h4>Flipping Coin Simulation 📈</h4>
 
 
-					<iframe scrolling="no" style="border:0px;" width="755" height="532"
-						src="sketches/tossing-coin/"></iframe>
+				<iframe scrolling="no" style="border:0px;" width="755" height="532"
+					src="sketches/tossing-coin/"></iframe>
 
-					<div style="font-size:40%;margin-top:-25px">
-						<p>
-							Source: <a href="https://digitalfirst.bfwpub.com/stats_applet/stats_applet_10_prob.html"
-								target="_blank">Digital First <i class="fa fa-external-link-alt"></i></a>
-						</p>
-					</div>
+				<div style="font-size:40%;margin-top:-25px">
+					<p>
+						Source: <a href="https://digitalfirst.bfwpub.com/stats_applet/stats_applet_10_prob.html"
+							target="_blank">Digital First <i class="fa fa-external-link-alt"></i></a>
+					</p>
+				</div>
 			</section>
 
 			<!-- Ends sections -->
