--- a/slides/1010eng/gauss-elimination-systems.html
+++ b/slides/1010eng/gauss-elimination-systems.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -50,11 +60,14 @@
 			<section data-auto-animate>
 				<h6>Practice Gauss elimination</h6>
 				<div style="margin-top: -10px;">
-					<iframe scrolling="no" title="Gauss Method: Systems of linear equations 3x3" src="https://www.geogebra.org/material/iframe/id/c8q33f3m/width/890/height/545/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="890px" height="545px" style="border:0px;" allowfullscreen=""> </iframe>
+					<iframe scrolling="no" title="Gauss Method: Systems of linear equations 3x3"
+						src="https://www.geogebra.org/material/iframe/id/c8q33f3m/width/890/height/545/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
+						width="890px" height="545px" style="border:0px;" allowfullscreen=""> </iframe>
 				</div>
 				<div style="font-size:35%;margin-top:-20px">
 					<p>
-						 Solve the system and input your solution for $x,$ $y,$ and $z.$ Then, click on <strong>Check</strong>.
+						Solve the system and input your solution for $x,$ $y,$ and $z.$ Then, click on
+						<strong>Check</strong>.
 						<a href="https://www.geogebra.org/m/bfybtmjh" target="_blank">Source <i
 								class="fa fa-external-link-alt"></i></a>
 					</p>
