--- a/slides/1010eng/matrices-transformations.html
+++ b/slides/1010eng/matrices-transformations.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -50,7 +60,7 @@
 			<section data-auto-animate>
 				<h4>Matrices as Linear transformations</h4>
 				<div>
-					
+
 					<iframe scrolling="no" title="Week 7: Transformations and Determinant"
 						src="https://www.geogebra.org/material/iframe/id/ugvur8p2/width/750/height/422/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false"
 						width="750px" height="422px" style="border:0px;" allowfullscreen=""> </iframe>
