--- a/slides/1010eng/sum-two-dice.html
+++ b/slides/1010eng/sum-two-dice.html
@@ -39,6 +39,15 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
 
 </head>
 
@@ -51,7 +60,9 @@
 			<section data-auto-animate>
 				<h5>Probability distribution 📊: Sum of Two Dice 🎲🎲</h5>
 				<div>
-					<iframe scrolling="no" title="Simulation: The sum of two dice" src="https://www.geogebra.org/material/iframe/id/psscmt5d/width/787/height/452/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="787px" height="452px" style="border:0px;" allowfullscreen=""> </iframe>
+					<iframe scrolling="no" title="Simulation: The sum of two dice"
+						src="https://www.geogebra.org/material/iframe/id/psscmt5d/width/787/height/452/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false"
+						width="787px" height="452px" style="border:0px;" allowfullscreen=""> </iframe>
 				</div>
 				<div style="font-size:40%;margin-top:-10px">
 					<p>
