--- a/slides/1010eng/week-07.html
+++ b/slides/1010eng/week-07.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -63,7 +73,7 @@
 						Engineering Mathematics 1
 					</span>
 				</h2>
-				
+
 
 				<p style="margin-top: 50px;">Week 7 - Matrices</p>
 
@@ -962,7 +972,8 @@
 							width="789px" height="354px" style="border:0px;" allowfullscreen=""> </iframe>
 					</div>
 
-					<p style="font-size: 40%;"><a href="https://en.wikipedia.org/wiki/Rule_of_Sarrus" target="_blank">Rule of Sarrus</a></p>
+					<p style="font-size: 40%;"><a href="https://en.wikipedia.org/wiki/Rule_of_Sarrus"
+							target="_blank">Rule of Sarrus</a></p>
 					<br />
 					<br />
 				</section>
