--- a/slides/1010eng/week-08.html
+++ b/slides/1010eng/week-08.html
@@ -38,7 +38,17 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
-	
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
+
 
 </head>
 
@@ -186,8 +196,9 @@
 
 					<div style="font-size:40%;margin-top:-30px">
 						<p>
-							<button onclick="var ifr=document.getElementsByName('tossing-coin')[0]; ifr.src=ifr.src;" style="cursor: pointer;"><strong><i class="fas fa-sync"></i></strong></button>
-							
+							<button onclick="var ifr=document.getElementsByName('tossing-coin')[0]; ifr.src=ifr.src;"
+								style="cursor: pointer;"><strong><i class="fas fa-sync"></i></strong></button>
+
 
 							<!--&nbsp;&nbsp;&nbsp; Source: <a href="https://digitalfirst.bfwpub.com/stats_applet/stats_applet_10_prob.html"
 								target="_blank">Digital First <i class="fa fa-external-link-alt"></i></a>-->
