--- a/slides/1010eng/week-10.html
+++ b/slides/1010eng/week-10.html
@@ -38,6 +38,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -276,7 +286,8 @@
 						<p class="fragment" data-fragment-index="0">1. Why use permutations, not combinations?</p>
 						<p class="fragment" data-fragment-index="1" style="padding-left: 20px;padding-right: 30px;">
 							<strong>Ans.</strong> Each person is an individual, distinguishable entity (e.g., Person 1,
-							Person 2, ..., Person 6). We're considering who gets which hour.</p>
+							Person 2, ..., Person 6). We're considering who gets which hour.
+						</p>
 						<p class="fragment" data-fragment-index="2">2. What is the probability of at least 3 people out
 							of 6 sharing a birth hour?
 						</p>
@@ -590,7 +601,7 @@ function draw() {
 						src="https://www.geogebra.org/material/iframe/id/sjhdteny/width/780/height/452/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false"
 						width="780px" height="452px" style="border:0px;" allowfullscreen=""> </iframe>
 
-						<br/><br/>
+					<br /><br />
 				</section>
 			</section>
 
