--- a/slides/1017scg/pond.html
+++ b/slides/1017scg/pond.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Coming soon!</title>
+	<title>Pond</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -39,9 +39,15 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
-	<script src="https://complex-analysis.com/applets/mathcell/math.js"></script>
-	<script src="https://complex-analysis.com/applets/mathcell/mathcell.js"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
 
 </head>
 
@@ -52,11 +58,12 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 
-			<section data-preload data-background-color="rgb(20,20,20)" 
-			    data-background-interactive data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/" >
+			<section data-preload data-background-color="rgb(20,20,20)" data-background-interactive
+				data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/">
 
-				<p style="font-size:16px">Coming soon! In the mean time, look for the fish that follows your mouse 👉🖱️!</p>
-				
+				<p style="font-size:16px">Coming soon! In the mean time, look for the fish that follows your mouse
+					👉🖱️!</p>
+
 				<!--
 				<iframe style="border: 0px"
 				scrolling="no"
@@ -64,16 +71,16 @@
 				height="590" 
 				src="https://www.dynamicmath.xyz/sketches/my-pond/"
 				></iframe>-->
-	
-				<br/><br/>
-				<br/><br/>
-				<br/><br/>
-				<br/><br/>
-				<br/><br/>
-				<br/><br/>
+
+				<br /><br />
+				<br /><br />
+				<br /><br />
+				<br /><br />
+				<br /><br />
+				<br /><br />
 			</section>
 
-			
+
 
 			<!-- Ends sections -->
 
