--- a/slides/1017scg/template.html
+++ b/slides/1017scg/template.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 	<style>
 		.fragment.emph {
 			font-weight: normal;
@@ -86,7 +96,7 @@
 			<section>
 				<h3>Foundation Mathematics</h3>
 
-				<br/>
+				<br />
 				<p style="font-size: 120%;margin-bottom: 50px;">
 					Welcome!
 				</p>
@@ -94,12 +104,12 @@
 
 
 				<div class="size-80">
-					
-						<p class="fragment" data-fragment-index="0">
-							<span class="fragment custom emph">Convenor:</span>
-							<span>Juan Carlos Ponce Campuzano</span>
-						</p>
-					
+
+					<p class="fragment" data-fragment-index="0">
+						<span class="fragment custom emph">Convenor:</span>
+						<span>Juan Carlos Ponce Campuzano</span>
+					</p>
+
 
 				</div>
 
@@ -112,7 +122,7 @@
 
 			</section>
 
-			
+
 
 
 			<!-- Ends sections -->
