--- a/slides/1010eng/binomial-distribution.html
+++ b/slides/1010eng/binomial-distribution.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 
 </head>
 
@@ -51,7 +61,9 @@
 			<section data-auto-animate>
 				<h4>Binomial Distribution: Exploration tool 📊</h4>
 				<div>
-					<iframe scrolling="no" title="Binomial Distribution: Exploration tool" src="https://www.geogebra.org/material/iframe/id/nmkwvdyq/width/750/height/422/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="750px" height="422px" style="border:0px;" allowfullscreen=""> </iframe>
+					<iframe scrolling="no" title="Binomial Distribution: Exploration tool"
+						src="https://www.geogebra.org/material/iframe/id/nmkwvdyq/width/750/height/422/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
+						width="750px" height="422px" style="border:0px;" allowfullscreen=""> </iframe>
 				</div>
 				<div style="font-size:40%;margin-top:-10px">
 					<p>
