--- a/slides/1010eng/eigenvectors.html
+++ b/slides/1010eng/eigenvectors.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -57,9 +67,11 @@
 				</div>
 				<div style="font-size:40%;margin-top:-10px">
 					<p>
-						Drag <strong>✕</strong> to change direction of vector $\mathbf w.$ 
+						Drag <strong>✕</strong> to change direction of vector $\mathbf w.$
 						Drag <strong>⭘</strong> to change length of vector $\mathbf w.$
-						<a href="https://www.geogebra.org/m/jzrjwbmz" target="_blank">Source <i class="fa fa-external-link-alt"></i></a></p>
+						<a href="https://www.geogebra.org/m/jzrjwbmz" target="_blank">Source <i
+								class="fa fa-external-link-alt"></i></a>
+					</p>
 				</div>
 				<br />
 			</section>
