--- a/slides/1010eng/exploring-inverse.html
+++ b/slides/1010eng/exploring-inverse.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -50,13 +60,15 @@
 			<section data-auto-animate>
 				<h6>Exploring Inverse functions</h6>
 				<div style="margin-top: -10px;">
-					<iframe scrolling="no" title="Exploring Inverse functions" src="https://www.geogebra.org/material/iframe/id/un7jjmrq/width/800/height/545/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false" width="800px" height="545px" style="border:0px;" allowfullscreen> </iframe>
+					<iframe scrolling="no" title="Exploring Inverse functions"
+						src="https://www.geogebra.org/material/iframe/id/un7jjmrq/width/800/height/545/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false"
+						width="800px" height="545px" style="border:0px;" allowfullscreen> </iframe>
 				</div>
 				<div style="font-size:32%;margin-top:-25px">
 					<p>
-					 <a href="https://www.geogebra.org/m/vtf2qfjs" target="_blank">Source <i
-								class="fa fa-external-link-alt"></i></a> 
-								
+						<a href="https://www.geogebra.org/m/vtf2qfjs" target="_blank">Source <i
+								class="fa fa-external-link-alt"></i></a>
+
 					</p>
 				</div>
 			</section>
