--- a/slides/1010eng/monty-hall-game.html
+++ b/slides/1010eng/monty-hall-game.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 
 </head>
 
@@ -51,13 +61,12 @@
 			<section data-auto-animate>
 				<h4>Monty Hall Game</h4>
 
-					<div>
-						<iframe scrolling="no" 
-							src="sketches/three-doors-goat/"
-							width="100%" height="400px" style="border:0px;" allowfullscreen=""> </iframe>
-					</div>
+				<div>
+					<iframe scrolling="no" src="sketches/three-doors-goat/" width="100%" height="400px"
+						style="border:0px;" allowfullscreen=""> </iframe>
+				</div>
 
-					<br/><br/><br/>
+				<br /><br /><br />
 			</section>
 
 			<!-- Ends sections -->
