--- a/slides/1010eng/probability-distributions.html
+++ b/slides/1010eng/probability-distributions.html
@@ -39,6 +39,15 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
 
 </head>
 
@@ -51,14 +60,16 @@
 			<section data-auto-animate>
 				<h6>Probability Distributions</h6>
 				<div style="margin-top: -10px;">
-					<iframe scrolling="no" title="Probability Calculator: Binomial distribution & more" src="https://www.geogebra.org/material/iframe/id/a4n7qxjt/width/795/height/543/border/888888/sfsb/false/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false" width="795px" height="543px" style="border:0px;" allowfullscreen=""> </iframe>
+					<iframe scrolling="no" title="Probability Calculator: Binomial distribution & more"
+						src="https://www.geogebra.org/material/iframe/id/a4n7qxjt/width/795/height/543/border/888888/sfsb/false/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/true/ctl/false"
+						width="795px" height="543px" style="border:0px;" allowfullscreen=""> </iframe>
 				</div>
 				<div style="font-size:32%;margin-top:-25px">
 					<p>
-						📖 <a href="https://www.geogebra.org/m/XUv5mXTm#chapter/400293" target="_blank">How to use this tool? <i
-								class="fa fa-external-link-alt"></i></a> &nbsp;
-						Designed  by <a href="https://www.geogebra.org/download" target="_blank">GeoGebra</a> 
-								
+						📖 <a href="https://www.geogebra.org/m/XUv5mXTm#chapter/400293" target="_blank">How to use this
+							tool? <i class="fa fa-external-link-alt"></i></a> &nbsp;
+						Designed by <a href="https://www.geogebra.org/download" target="_blank">GeoGebra</a>
+
 					</p>
 				</div>
 			</section>
