--- a/slides/1010eng/sketches/combinatorics/index.html
+++ b/slides/1010eng/sketches/combinatorics/index.html
@@ -19,6 +19,16 @@
   </script>
   <script src="js/d3.v3.min.js"></script>
   <script src="js/jquery-3.6.0.min.js"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8GQQBCYTB5');
+  </script>
 </head>
 
 <body>
@@ -29,9 +39,9 @@
       <div>
 
         <p>
-          Consider a bag of marbles in which each marble is 
+          Consider a bag of marbles in which each marble is
           a different color. If we draw marbles one at a time from the
-          bag without replacement, how many different 
+          bag without replacement, how many different
           ordered sequences (permutations) of the marbles are possible? How
           many different unordered sets (combinations)?
         </p>
@@ -50,8 +60,8 @@
         </div>
 
         <p>
-          Select a column on the table to visualise 
-          all possible permutations or combinations 
+          Select a column on the table to visualise
+          all possible permutations or combinations
           of the marbles.
         </p>
 
@@ -83,7 +93,9 @@
           </tr>
         </table>
 
-        <div class="note">Adapted from <a href="https://github.com/seeingtheory/Seeing-Theory/blob/master/compound-probability/compound-probability.js" target="_blank">Seeing Theory</a></div>
+        <div class="note">Adapted from <a
+            href="https://github.com/seeingtheory/Seeing-Theory/blob/master/compound-probability/compound-probability.js"
+            target="_blank">Seeing Theory</a></div>
       </div>
     </div>
     <div class="right">
