--- a/slides/1010eng/week-12.html
+++ b/slides/1010eng/week-12.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -342,7 +352,7 @@
 					<br /><br />
 				</section>
 
-				<section data-auto-animate >
+				<section data-auto-animate>
 					<h3>💊 Medicine in the Body</h3>
 					<div class="size-60 left-txt">
 
@@ -1067,7 +1077,8 @@
 					</div>
 
 					<p style="font-size: 75%;">
-						<a target="_blank" href="https://www.dynamicmath.xyz/eng-scg/exploring-inverse.html#/">Exploring Inverse functions tool <i class="fa fa-external-link-alt"></i></a>
+						<a target="_blank" href="https://www.dynamicmath.xyz/eng-scg/exploring-inverse.html#/">Exploring
+							Inverse functions tool <i class="fa fa-external-link-alt"></i></a>
 					</p>
 
 
