--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -39,6 +39,16 @@
 		<script src="../reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8GQQBCYTB5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GQQBCYTB5');
+	</script>
+
 </head>
 
 <body>
@@ -455,7 +465,7 @@
 					</div>
 				</section>
 
-				
+
 
 				<section>
 					<h3>Visualising the Theorem</h3>
