--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" href="assets/icon/infinity32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="assets/icon/infinity16.png" sizes="16x16">
 
-  <link rel="stylesheet" type="text/css" href="assets/inf-room/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/main/style.css">
 
   <title>Infinite magic room</title>
 
@@ -63,7 +63,7 @@ Date: 15/Jan/2024
 
     function preload() {
       // load the shader
-      theShader = loadShader('assets/inf-room/shader.vert', 'assets/inf-room/shader.frag');
+      theShader = loadShader('assets/main/shader.vert', 'assets/main/shader.frag');
     }
 
     function setup() {
