--- a/notes/index.html
+++ b/notes/index.html
@@ -8,7 +8,7 @@ https://www.geogebra.org/m/xsy4fy25
 <html lang="en">
 
 <head>
-    <title>Rotating Rings - Three.js</title>
+    <title>Notes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
