--- a/tools/index.html
+++ b/tools/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math symbols rain</title>
+    <title>404!</title>
 
     <link rel="icon" type="image/png" href="../assets/icon/infinity32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="../assets/icon/infinity16.png" sizes="16x16">
