--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -314,6 +314,66 @@
 
 				</section>
 
+				<section>
+					<h4>Applications: Singular Value Decomposition (SVD)</h4>
+				</section>
+
+				<section>
+					<h5>Applications: Affine transformations</h5>
+
+
+					<table id="eqarray" style="width:100%;">
+						<tr>
+							<td style="width:55%">
+								<div class="size-80">
+									<div>
+										<p>
+											$
+											\ds
+											f(x,y)=\begin{bmatrix}
+											a & b\\
+											c & d
+											\end{bmatrix}
+											\begin{bmatrix}
+											x \\
+											y
+											\end{bmatrix} +
+											\begin{bmatrix}
+											e \\
+											f
+											\end{bmatrix}
+											$
+										</p>
+
+									</div>
+								</div>
+								
+							</td>
+							<td style="width:45%">
+
+								<div class="fragment" data-fragment-index="2">
+
+									<iframe style="border:none;width:300;height:500px" scrolling="no"
+										data-src="sketches/fern-cindyjs"></iframe>
+								</div>
+
+							</td>
+						</tr>
+					</table>
+
+					<div style="font-size:22px;margin-top:-20px" class="fragment" data-fragment-index="2">
+						<p>
+							📘 <a href="https://www.sciencedirect.com/book/9780120790616/fractals-everywhere"
+								target="_blank"><strong>Fractals everywhere</strong> <i class="fa fa-external-link-alt"
+									aria-hidden="true"></i></a>
+							&nbsp; - &nbsp;
+							<a href="https://en.wikipedia.org/wiki/Barnsley_fern" target="_blank"><strong>Barnsley
+									fern</strong> <i class="fa fa-external-link-alt" aria-hidden="true"></i></a>
+						</p>
+					</div>
+					<br />
+				</section>
+
 
 
 				
