--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -316,6 +316,12 @@
 
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
+
+					<iframe style="width: 500px;height: 420px;border: 1px solid black" src="sketches/svd-image-compression/"></iframe>
+
+					<br/>
+					<br/>
+					<br/>
 				</section>
 
 				<section>
