--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -314,6 +314,7 @@
 
 				</section>
 
+				<!--
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
 
@@ -323,6 +324,7 @@
 					<br/>
 					<br/>
 				</section>
+				-->
 
 				<section>
 					<h5>Applications: Affine transformations</h5>
@@ -359,8 +361,8 @@
 
 								<div class="fragment" data-fragment-index="2">
 
-									<iframe style="border:none;width:300;height:500px" scrolling="no"
-										data-src="sketches/fern-cindyjs"></iframe>
+									<iframe style="border:none;width:200;height:350px" scrolling="no"
+										data-src="sketches/fern/"></iframe>
 								</div>
 
 							</td>
