--- a/slides/2201nsc/week-01.html
+++ b/slides/2201nsc/week-01.html
@@ -314,6 +314,16 @@
 
 				</section>
 
+				<section>
+					<h4>Applications: Singular Value Decomposition (SVD)</h4>
+
+					<video loop style="width:500px" data-autoplay data-src="images/week-01/compressing-cat.mov"></video>
+					
+					<br/>
+					<br/>
+					<br/>
+				</section>
+
 				<!--
 				<section>
 					<h4>Applications: Singular Value Decomposition (SVD)</h4>
@@ -359,7 +369,7 @@
 							</td>
 							<td style="width:45%">
 
-								<div class="fragment" data-fragment-index="2">
+								<div>
 
 									<iframe style="border:none;width:200;height:350px" scrolling="no"
 										data-src="sketches/fern/"></iframe>
@@ -369,7 +379,7 @@
 						</tr>
 					</table>
 
-					<div style="font-size:22px;margin-top:-20px" class="fragment" data-fragment-index="2">
+					<div style="font-size:22px;margin-top:-20px">
 						<p>
 							📘 <a href="https://www.sciencedirect.com/book/9780120790616/fractals-everywhere"
 								target="_blank"><strong>Fractals everywhere</strong> <i class="fa fa-external-link-alt"
